--- a/FoodVigan.html
+++ b/FoodVigan.html
@@ -151,11 +151,12 @@ FOOD OF VIGAN CITY
 </div>
 
 <div class="topnav">
-  <a href="#" style="float:center">HISTORY OF VIGAN CITY</a>
-  <a href="#" style="float:center">FOOD OF VIGAN CITY</a>
+  <a href="https://ryuthegreat.github.io/ViganCity/HistoryVigan.html" style="float:center">HISTORY OF VIGAN CITY</a>
+  <a href="https://ryuthegreat.github.io/ViganCity/FoodVigan.html" style="float:center">FOOD OF VIGAN CITY</a>
   <a href="#" style="float:center">DANCES OF VIGAN CITY</a>
   <a href="#" style="float:center">CULTURE OF VIGAN CITY</a> 
   <a href="#" style="float:center">POPULATION OF VIGAN CITY</a>
+  <a href="https://ryuthegreat.github.io/ViganCity/HomePage.html" style="float:center">FOOD OF VIGAN CITY</a>
 </div>
 
 <div class="row">
