--- a/HomePage.html
+++ b/HomePage.html
@@ -136,7 +136,7 @@ HOME PAGE
   <a href="#" style="float:center">DANCES OF VIGAN CITY</a>
   <a href="#" style="float:center">CULTURE OF VIGAN CITY</a> 
   <a href="#" style="float:center">POPULATION OF VIGAN CITY</a>
-  <a href="https://ryuthegreat.github.io/ViganCity/HomePage.html" style="float:center">FOOD OF VIGAN CITY</a>
+  <a href="https://ryuthegreat.github.io/ViganCity/HomePage.html" style="float:center">HOME PAGE</a>
 </div>
 
 <div class="row">
